--- a/about.html
+++ b/about.html
@@ -1,5 +1,86 @@
 <!DOCTYPE html>
-<html>
-  <head></head>
-  <body></body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Arduino ALNKY</title>
+    <!-- Old not used anymores -->
+    <!-- <link rel="stylesheet" href="css/main.css"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/da85ad8321.js" crossorigin="anonymous"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-database.js"></script>
+    <script src="js/main.js"></script>
+</head>
+
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top mb-5">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">
+                <Span>ArduinoALNKY</Span>
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+                </ul>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="#">About</a>
+                    </li>
+                    <li class="nav-item dropdown disabled">
+                        <a class="nav-link dropdown-toggle disabled" role="button" data-bs-toggle="dropdown" aria-expanded="false">Project</a>
+                        <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">#</a></li>
+                            <li><a class="dropdown-item" href="#">#</a></li>
+                        </ul>
+                    </li>
+                </ul>
+                <div class="d-flex align-items-center">
+
+                    <button type="button" class="btn btn-second me-3">
+                      See More
+                    </button>
+                    <a
+                      class="btn btn-dark px-3"
+                      href="https://github.com/vybraan/ArduinoALNKY"
+                      role="button"
+                      ><i class="fa-brands fa-github"></i></a>
+                  </div>
+            </div>
+        </div>
+    </nav>
+
+
+    <!-- <header>
+        
+    </header> -->
+
+    <header class="container text-center my-5">
+        <img class="my-5"  src="foto.png" alt="" width="100" height="100">
+        <h3>TME Education</h3>
+        <h3>Arduino Week 2022</h3>
+        <h3>Faculdade De Engenharia (UEM)</h3>
+    </header>
+
+
+    <div class="container"><h1>here's about</h1></div>
+
+
+    <footer class="footer mt-auto py-3 bg-light" style="text-align: center;">
+        <div class="container-fluid">
+          <span class="text-muted"><strong>@vybraan, Unix Code Erudition</strong></span>
+        </div>
+      </footer>
+</body>
 </html>
